--- a/css/recettes.css
+++ b/css/recettes.css
@@ -15,11 +15,15 @@ body{
 }
 
 .titre {
-    background-color:rgb(244, 183, 62);
+    background-color:rgb(244, 197, 101);
     cursor: pointer;
     border-radius: 5px;
 }
 
+.nbre {
+    color:red;
+
+}
 
 .Ingredients-container .Ingredients {
     display: flex;
@@ -40,17 +44,16 @@ body{
     color: red;
 }
 
-.Préparation button {
-    margin-bottom:10px ;
-    cursor: pointer;
-}
-
 .Ingredients{
-    display: none;
     list-style-type: disc;
     padding-left: 20px;
 }
 
-.Préparation{
+.préparation{
+    display: none;
     text-align: justify;
+}
+
+.préparation:focus{
+    display: block;
 }
