--- a/css/mentionslegales.css
+++ b/css/mentionslegales.css
@@ -20,11 +20,6 @@ p {
 
 }
 
-body {
-    
-    
-}
-
 .parent {
     display: flex;
     align-items: center;
@@ -32,15 +27,168 @@ body {
 }
 
 
-body {background-image: url(background\ rose.jpg);}
-footer 
+body {
+    background-image: cover;
+    background-size: contain;
+}
+
+.header {
+    max-height: 100px 
+    width: 100%;
+    background-image: linear-gradient;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+
+}
+
+
+
+nav {
+    display: inline-block;
+    padding: 2% 6%;
+}
+nav:first-child {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+nav img {
+    width: 150px;
+}
+
+.nav-links {
+    flex: 1;
+    text-align: right;
+}
+
+.nav-links ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.nav-links ul li a {
+    color: rgb(7, 0, 2);
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 400;
+    background-color: #629b7015;
+    border-radius: 15%;
+}
+
+/* centrer le menu 
+.wrapper {
+    margin: 0 auto;
+    width: 1000px;
+}
+
+.sub-menu{
+    display:none;
+
+}
+*/
+.nav-links ul li::after {
+    content: '';
+    height: 2px;
+    width: 0%;
+    background: #de8781;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+
+.nav-links ul li:hover::after {
+    width: 100%;
+}
+
+.text-box {
+    width: 90%;
+    color: black;
+    position: relative;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.text-box h1 {
+    font-size: 62px;
+    margin: 50px;
+    margin-top: 15%;
+}
+
+.text-box p {
+    margin: 10px 150px; 
+    font-size: 15px;
+    font-weight:500; 
+    color: #2d2928;
+    background-color: rgba(241, 230, 217, 0.349);
+    border-radius: 10%;
+}
+
+.bouton-catalogue {
+    display: inline-block;
+    text-decoration: none;
+    color: #281716;
+    border: 1px solid #de8781;
+    padding: 12px 34px;
+    font-size: 20px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    border-radius: 35%;
+    margin-top: 10%;
+}
+  
+body  {font-family: Arial, Helvetica, sans-serif;
+      padding: 0px;}
+    
+    input[type=text], textarea, input[type=email] {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+      margin-top: 6px;
+      margin-bottom: 16px;
+      margin-right: 0px;
+      margin-left: 0px;
+      resize: vertical;
+    }
+    label{margin-right: 0px;
+      margin-left: 0px;
+      width: 100%;}
+    
+    input[type=submit] {
+      background-color: #1255a2;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    
+    input[type=submit]:hover {
+      background-color: #1872D9;
+    }
+
+
+ 
 
 .icons{
     display: flex;
     margin-left: 550px
 }
 
-ul{
+.icons a{
+
+    margin: 5px 10px;
+}
+
+.liens-footer{
   margin-top: 20px;
   display: flex;
   justify-content: space-around;
@@ -52,8 +200,12 @@ ul{
 }
 
 
-a {color: black;}
-a {font-weight: bolder;}
+a {
+    color: black;
+    font-weight: bolder;
+    
+}
+
 
 .linkedin:hover {
     color: #04009a;
