--- a/css/Inscription.css
+++ b/css/Inscription.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Poppins';
-    src: url('./Poppins/Poppins-SemiBold.ttf');
+    src: url('../Police\ -\ Poppins/Poppins-SemiBold.ttf');
 }
 
 .outer-container {
-background-image: url("Images/Img fond 2 vert.png");
+background-image: url("../M\'s\ Images/Img\ fond\ 2\ vert.png");
 background-size: contain;
 background-attachment:fixed;
 background-position: center center;
@@ -43,15 +43,15 @@ padding: 0;
 } */ 
 
 h1 {
-    font-size: 40px
+    font-size: 50px
 }
 
 h1, h2 {
-    color: #405538;
+    color: #E99F9F;
 }
 
 h4, p {
-    color:  #E99F9F;
+    color:  #405538;
 }
 
 /* h1,h2,h4 {
