--- a/css/recettes.css
+++ b/css/recettes.css
@@ -5,14 +5,16 @@ body{
 
 .tout{
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-around;
 }
 
 .recette img{
-    width: 300px;
+    width: 320px;
     height: auto;
-    display: block;
+    position: relative;
+    display: inline-block;
 }
+
 
 .titre {
     background-color:rgb(244, 197, 101);
@@ -25,7 +27,6 @@ body{
 }
 
 .Ingredients-container .Ingredients {
-    display: flex;
     list-style-type: disc;
     padding-left: 20px;
 }
@@ -35,12 +36,33 @@ body{
     padding: 5px;
 }
 
-.fa-regular .fa-heart {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 24px;
+.favorite-icon {
     color: red;
+    top:0;
+    left:0;
+    font-size: 24px;
+}
+
+.favorite-icon1 {
+    color:#9a9999;
+    border:rgb(0, 0, 0);
+    font-size: 24px;
+}
+
+.PT i {
+    display: flex;
+    justify-content: space-between;
+}
+.coeur {
+    position: absolute;
+    top : 12%;
+    left: 16%;
+}
+
+.coeur1 {
+    position: absolute;
+    top : 11%;
+    left : 65% 
 }
 
 .Ingredients{
@@ -60,26 +82,26 @@ body{
 
 
 footer 
-      
-      
+          
 ul{
   margin-top: 20px;
   display: flex;
   
-  align-items: center;
+  
+align-items: flex-end;
   justify-content: space-around;
   height: 40px;
  padding-top: 30px;
  font-size: 18px;
   color: black;
 }
+
 .icons{
   display: flex;
- margin-left: 550px;
-
-
+ margin-left: 680px;
  
 }  
+
 
 a {color: black;}
 a {font-weight: bolder;}
