--- a/css/contact2.css
+++ b/css/contact2.css
@@ -57,6 +57,7 @@ img {
       font-weight: 400;
       background-color: #629b7015;
       border-radius: 15%;
+      font-weight:bolder
   }
   
   /* centrer le menu 
