--- a/css/mentionslegales.css
+++ b/css/mentionslegales.css
@@ -1,5 +1,10 @@
+h1 {
+    text-decoration:underline
+}
+
 h2 {
     font-size: 1.625rem;
+    text-decoration:underline
 }
 
 .texte {
@@ -68,6 +73,7 @@ nav img {
     display: inline-block;
     padding: 8px 12px;
     position: relative;
+
 }
 
 .nav-links ul li a {
@@ -77,6 +83,8 @@ nav img {
     font-weight: 400;
     background-color: #629b7015;
     border-radius: 15%;
+    font-weight:bolder
+    
 }
 
 /* centrer le menu 
