--- a/css/contact2.css
+++ b/css/contact2.css
@@ -176,7 +176,7 @@ img {
       }
      
 
-      footer 
+      /* footer 
       
       
       ul{
@@ -189,16 +189,16 @@ img {
        padding-top: 30px;
        font-size: 18px;
         color: black;
-      }
+      } */
       .icons{
         display: flex;
        margin-left: 550px;
 
-       .icons a{
-        margin: 5px 10px;
-    }
        
       }  
+      .icons a{
+       margin: 5px 10px;
+   }
       .liens-footer{
         margin-top: 20px;
         display: flex;
@@ -210,7 +210,8 @@ img {
         color: black;
       }
     
-    a {color: black;}
+    a {
+      color: black;}
     a {font-weight: bolder;}
     
     .linkedin:hover {
@@ -227,7 +228,7 @@ img {
   color: #e11d74;
 }
 
-ol>a:hover {
+.liens-footer a:hover {
   color: red;
   background-color: transparent;
   text-decoration: overline;
@@ -236,23 +237,3 @@ ol>a:hover {
 a i {
   transition: all 0.3s linear;
 }
-
-
-
-
-    
-    
-    
-    
-    
-    
-    
-   
-    
-      
-      
-      
-      
-      
-      
-      
