--- a/css/mentionslegales.css
+++ b/css/mentionslegales.css
@@ -38,7 +38,7 @@ body {
 }
 
 .header {
-    max-height: 100px 
+    max-height: 100px ;
     width: 100%;
     background-image: linear-gradient;
     background-position: center;
@@ -46,6 +46,7 @@ body {
     position: relative;
 
 }
+
 
 
 
@@ -228,7 +229,7 @@ color: blue;
 .instagram:hover {
 color: #e11d74;
 }
-ol>a:hover {
+.liens-footer a:hover {
     color: red;
     background-color: transparent;
     text-decoration: overline;
