--- a/css/recettes.css
+++ b/css/recettes.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url(/images/background\ rose.jpg);
+    background-image: url(./../images/background\ rose.jpg);
 }
 
 .tout{
