--- a/css/mpd oublié.css
+++ b/css/mpd oublié.css
@@ -77,3 +77,51 @@ button:hover {
 .retourne-connex {
     color: #405538
 }
+
+footer   
+ul{
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 40px;
+ padding-top: 150px;
+ font-size: 18px;
+ font-family: 'Poppins';
+ color:#405538;
+  z-index: -1;
+}
+.icons{
+  display: flex;
+ margin-left: 550px;
+ z-index: -1;
+
+}  
+
+a {color:  #405538;}
+a {font-weight: bolder;}
+
+.linkedin:hover {
+color: #04009a;
+}
+.twitter:hover {
+color: #00adb5;
+}
+.facebook:hover {
+color: blue;
+}
+
+.instagram:hover {
+color: #e11d74;
+}
+
+ol>a:hover {
+color: red;
+background-color: transparent;
+text-decoration: overline;
+z-index: -1;
+}
+
+a i {
+transition: all 0.3s linear;
+}
