--- a/css/Connexion.css
+++ b/css/Connexion.css
@@ -22,6 +22,146 @@
    
     /* z-index: -1;Place it behind the content */
 
+    .header {
+        max-height: 100px ;
+        width: 100%;
+        background-image: linear-gradient;
+        background-position: center;
+        background-size: cover;
+        position: relative;
+    
+    }
+    
+  
+    
+    nav {
+        display: flex;
+        padding: 2% 6%;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    nav img {
+        width: 150px;
+    }
+    
+    .nav-links {
+        flex: 1;
+        text-align: right;
+    }
+    
+    .nav-links ul li {
+        list-style: none;
+        display: inline-block;
+        padding: 8px 12px;
+        position: relative;
+    }
+    
+    .nav-links ul li a {
+        color: rgb(11, 2, 5);
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: 400;
+        background-color: #629b7015;
+        border-radius: 15%;
+        font-weight:bolder
+    }
+    
+    /* centrer le menu 
+    .wrapper {
+        margin: 0 auto;
+        width: 1000px;
+    }
+    
+    .sub-menu{
+        display:none;
+    
+    }
+    */
+    .nav-links ul li::after {
+        content: '';
+        height: 2px;
+        width: 0%;
+        background: #de8781;
+        display: block;
+        margin: auto;
+        transition: 0.5s;
+    }
+    
+    .nav-links ul li:hover::after {
+        width: 100%;
+    }
+    
+    .text-box {
+        width: 90%;
+        color: black;
+        position: relative;
+        top: 50px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    
+    .text-box h1 {
+        font-size: 62px;
+        margin: 50px;
+        margin-top: 15%;
+    }
+    
+    .text-box p {
+        margin: 10px 150px; 
+        font-size: 15px;
+        font-weight:500; 
+        color: #2d2928;
+        background-color: rgba(241, 230, 217, 0.349);
+        border-radius: 10%;
+    }
+    
+    .bouton-catalogue {
+        display: inline-block;
+        text-decoration: none;
+        color: #281716;
+        border: 1px solid #de8781;
+        padding: 12px 34px;
+        font-size: 20px;
+        background: transparent;
+        position: relative;
+        cursor: pointer;
+        border-radius: 35%;
+        margin-top: 10%;
+    }
+      
+    body  {font-family: Arial, Helvetica, sans-serif;
+          padding: 0px;}
+        
+        input[type=text], textarea, input[type=email] {
+          width: 100%;
+          padding: 12px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          box-sizing: border-box;
+          margin-top: 6px;
+          margin-bottom: 16px;
+          margin-right: 0px;
+          margin-left: 0px;
+          resize: vertical;
+        }
+        label{margin-right: 0px;
+          margin-left: 0px;
+          width: 100%;}
+        
+        input[type=submit] {
+          background-color: #1255a2;
+          color: white;
+          padding: 12px 20px;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+        
+        input[type=submit]:hover {
+          background-color: #1872D9;
+        }
      .left-background {
         background-image: url("../M\'s\ Images/Im\ connexion.png");
         background-repeat: no-repeat;
@@ -105,7 +245,55 @@ button:hover {
     background-color: #A2C19B;
     color: #405538;
 }
-footer   
+.icons{
+    display: flex;
+   margin-left: 550px;
+
+   
+  }  
+  .icons a{
+   margin: 5px 10px;
+}
+  .liens-footer{
+    list-style-type:none;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 40px;
+   padding-top: 30px;
+   font-size: 18px;
+    color: black;
+  }
+
+a {
+  color: black;}
+a {font-weight: bolder;}
+
+.linkedin:hover {
+  color: #04009a;
+}
+.twitter:hover {
+color: #00adb5;
+}
+.facebook:hover {
+color: blue;
+}
+
+.instagram:hover {
+color: #e11d74;
+}
+
+.liens-footer a:hover {
+color: red;
+background-color: transparent;
+text-decoration: overline;
+}
+
+a i {
+transition: all 0.3s linear;
+}
+/* footer   
 ul{
   margin-top: 20px;
   display: flex;
@@ -123,7 +311,7 @@ ul{
 
 Reduce the margin-top to reduce the space above the footer. You can try setting it to a smaller value, or even 0 if you want it to be closer to the bottom.
 Increase the padding-top to add space inside the footer. This will push the content downward. */
-
+/* 
 .icons{
   display: flex;
  margin-left: 550px;
@@ -157,7 +345,7 @@ z-index: -1;
 
 a i {
 transition: all 0.3s linear;
-}
+} */ 
 
 /* Ça ne fait rien sur souvenir > ça a un impact uniquement sur les parties où on remplis des infos mail/mdp*/
 
