--- a/css/mentionslegales.css
+++ b/css/mentionslegales.css
@@ -198,6 +198,7 @@ body  {font-family: Arial, Helvetica, sans-serif;
 }
 
 .liens-footer{
+  list-style-type:none;
   margin-top: 20px;
   display: flex;
   justify-content: space-around;
