--- a/css/Inscription.css
+++ b/css/Inscription.css
@@ -7,79 +7,7 @@
 }
 
 .header {
-    min-height: 100vh;
-    width: 100%;
-    background-image: linear-gradient;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-
-}
-
-body {
-    background-image: url("../images/background vert.jpg");
-    background-size: cover; 
-    background-repeat: no-repeat;
-    background-attachment: fixed; 
-   
-}
-
-nav {
-    display: flex;
-    padding: 2% 6%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-nav img {
-    width: 150px;
-}
-
-.nav-links {
-    flex: 1;
-    text-align: right;
-}
-
-.nav-links ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 8px 12px;
-    position: relative;
-}
-
-.nav-links ul li a {
-    color: rgb(184, 106, 128);
-    text-decoration: none;
-    font-size: 15px;
-    font-weight: 400;
-    background-color: #629b7015;
-    border-radius: 15%;
-}
-
-
-.nav-links ul li::after {
-    content: '';
-    height: 2px;
-    width: 0%;
-    background: #de8781;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-
-.nav-links ul li:hover::after {
-    width: 100%;
-}
-
-
-
-
-@font-face {
-    font-family: 'Poppins';
-    src: url('../Police\ -\ Poppins/Poppins-SemiBold.ttf');
-}
-
-.header {
+    margin-top: -50px;
     max-height: 100px ;
     width: 100%;
     background-image: linear-gradient;
@@ -113,7 +41,7 @@ nav img {
 }
 
 .nav-links ul li a {
-    color: rgb(11, 2, 5);
+    color:#de8781;
     text-decoration: none;
     font-size: 20px;
     font-weight: 400;
