--- a/css/Inscription.css
+++ b/css/Inscription.css
@@ -234,48 +234,49 @@ button:hover {
     
 }
 
-footer   
-ul{
-  margin-top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 40px;
- padding-top: 10px;
- font-size: 18px;
- font-family: 'Poppins';
- color:  #E99F9F;;
-  z-index: -1;
-}
 .icons{
-  display: flex;
- margin-left: 550px;
- z-index: -1;
+    display: flex;
+   margin-left: 550px;
 
-}  
+   
+  }  
+  .icons a{
+   margin: 5px 10px;
+}
+  .liens-footer{
+    list-style-type:none;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 40px;
+   padding-top: 10px;
+   font-size: 18px;
+    color: #de8781;
+  }
 
-a {color:   #E99F9F;}
+a {
+  color: #de8781;}
 a {font-weight: bolder;}
 
 .linkedin:hover {
-color: #04009a;
+  color: #A2C19B;
 }
 .twitter:hover {
-color: #00adb5;
+color: #A2C19B;
 }
 .facebook:hover {
-color: blue;
+color: #A2C19B;
 }
 
 .instagram:hover {
-color: #e11d74;
+color: #A2C19B;
 }
 
-ol>a:hover {
-color: red;
+.liens-footer a:hover {
+color:#A2C19B;
 background-color: transparent;
 text-decoration: overline;
-z-index: -1;
 }
 
 a i {
