--- a/css/Inscription.css
+++ b/css/Inscription.css
@@ -139,7 +139,7 @@ body  {font-family: Arial, Helvetica, sans-serif;
       margin-left: 0px;
       width: 100%;}
     
-    input[type=submit] {
+    /* input[type=submit] {
       background-color: #1255a2;
       color: white;
       padding: 12px 20px;
@@ -150,7 +150,7 @@ body  {font-family: Arial, Helvetica, sans-serif;
     
     input[type=submit]:hover {
       background-color: #1872D9;
-    }
+    } */
 .outer-container {
 background-image: url("../M\'s\ Images/Img\ fond\ 2\ vert.png");
 background-size: contain;
@@ -248,7 +248,8 @@ button:hover {
 }
 
 .my-submit-button   {
-    font-size: 16px;
+    background-color: #E99F9F;
+    font-size: 20px;
     font-weight: bold
 
 }
@@ -278,6 +279,7 @@ button:hover {
    padding-top: 10px;
    font-size: 18px;
     color: #de8781;
+    font-family: 'Poppins';
   }
 
 a {
