--- a/css/resultatrecettemystère.css
+++ b/css/resultatrecettemystère.css
@@ -1,18 +1,19 @@
 
 body{
-    background-image: url(./../images/background\ rose.jpg);
+    background-image: url(./../images/background\ vert.jpg);
 }
 
 .tout{
-    display:flex;
+    display: flex;
     justify-content: space-between;
+    align-content: end;
 }
 
 .mystère img{
-    width: auto;
+    width: 200px;
     height: auto;
     position: relative;
-    
+    display: inline-block;
 }
 
 
@@ -80,13 +81,15 @@ body{
 
 
 
+
+
 .header {
 
     max-height: 100px ;
 
     width: 100%;
 
-    background-image: linear-gradient;
+    /* background-image: linear-gradient; */
 
     background-position: center;
 
@@ -411,7 +414,7 @@ body  {font-family: Arial, Helvetica, sans-serif;
         margin-top: 20px;
         display: flex;
         justify-content: space-around;
-        align-items: center;
+        align-items:flex-start;
         height: 40px;
        padding-top: 30px;
        font-size: 18px;
@@ -446,18 +449,6 @@ body  {font-family: Arial, Helvetica, sans-serif;
 a i {
   transition: all 0.3s linear;
 }
-
-    
-    
-
-
-
-    
-
-
-
-   
-
 
 
     
