--- a/css/cssfrontpage.css
+++ b/css/cssfrontpage.css
@@ -372,6 +372,7 @@ padding: 0;
    margin: 5px 10px;
 }
   .liens-footer{
+    list-style-type:none;
     margin-top: 20px;
     display: flex;
     justify-content: space-around;
@@ -409,3 +410,27 @@ text-decoration: overline;
 a i {
 transition: all 0.3s linear;
 }
+
+
+/* menu déroulant  */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    z-index: 1;
+}
+
+.nav-links li:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a {
+    padding: 10px;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #555;
+}
+/* menu déroulant  */
